finally add firstname and lastname in UserEntity (as requested), update script for data generation,fix the patch user (now user cant block/unblock himself
